# BurntOrangeSwan

./: .gitignore  CMakeLists.txt  README.md
data/logs/: 11773.json  9259.json  9303.json
data/raw/reference/: prices_round_0_day_-1_log_11773.csv  prices_round_0_day_-1_log_9259.csv  prices_round_0_day_-1_log_9303.csv
include/engine/: loader.hpp  lob.hpp  results.hpp  strategy.hpp  sweeper.hpp  types.hpp
include/strategies/: fair_value.hpp  market_maker.hpp  mean_reversion.hpp  omni_strategy.hpp  spread_capture.hpp  stat_arb.hpp  universal_strat.hpp
python/: datamodel.py  generate_trader.py  trader.py  validate.py
python/traders/: trader_fv.py  trader_mm.py  trader_mr.py  trader_obi.py  trader_sa.py  trader_sc.py  trader_universal.py
scripts/: parse_logs.cpp  sweep.cpp  translator.cpp
src/: main.cpp
src/engine/: loader.cpp  lob.cpp
tools/: visualizer.html
